# implicit

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .travis.yml  .travis.yml.swp  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  appveyor.yml  cuda_setup.py  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  resources.html  ret  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorial_lastfm.html  tutorial_lastfm.ipynb  ㄱㄷㅅ
.github/: release-drafter.yml
.github/workflows/: build.yml  python-package.yml  release-drafter.yml
_sources/: index.rst.txt  installation.rst.txt  tutorial_lastfm.ipynb.txt
_sources/api/: ann.rst.txt  evaluation.rst.txt
_sources/api/models/: index.rst.txt  recommender_base.rst.txt
_sources/api/models/cpu/: bpr.rst.txt  knn.rst.txt
_sources/api/models/gpu/: als.rst.txt  index.rst.txt  matrix_factorization_base.rst.txt
_static/: documentation_options.js
api/: ann.html  evaluation.html  index.html
api/models/: index.html  recommender_base.html
api/models/cpu/: als.html  bpr.html  index.html  knn.html  lmf.html  matrix_factorization_base.html
api/models/gpu/: als.html  bpr.html  index.html  matrix_factorization_base.html
benchmarks/: README.md  benchmark_als.py  benchmark_qmf.py  benchmark_spark.py
ci/: install_cuda.sh  install_cuda_13.sh  rename_wheels.py
docs/: Makefile  README.md  als.rst  ann.rst  bpr.rst  cml.rst  conf.py  index.rst  lmf.rst  make.bat  models.rst  quickstart.rst
docs/source/: conf.py  index.rst  installation.rst  resources.rst
docs/source/api/: index.rst
docs/source/api/models/cpu/: als.rst  index.rst  knn.rst  lmf.rst  matrix_factorization_base.rst
docs/source/api/models/gpu/: bpr.rst
examples/: benchmark.py  benchmark_cg.py  lastfm.py  movielens.py  similar-artists.tsv  similar-movies.tsv  tutorial_lastfm.ipynb
implicit/: CMakeLists.txt  __bpr.pyx  __init__.py  _als.cpp  _als.pyx  _implicit.c  _implicit.pyx  _nearest_neighbours.cpp  _nearest_neighbours.pyx  als.py  annoy_als.py  approximate_als.py  bpr.cpp  bpr.py  bpr.pyx  cdae.cpp  cdae.pyx  cml.cpp  cml.pyx  evaluation.cpp  evaluation.pyx  implicit.py  lmf.cpp  lmf.py  lmf.pyx  matrix_factorization_base.cpp  matrix_factorization_base.pyx  nearest_neighbours.h  nearest_neighbours.py  nmslib_als.py  recommender.py  recommender_base.cpp  recommender_base.py  recommender_base.pyx  rng.pyx  rng_utils.pyx  temp.py  topnc.cpp  topnc.h  utils.py
implicit/ann/: annoy.py  faiss.py  nmslib.py
implicit/cpu/: CMakeLists.txt  _als.pyx  als.py  bpr.cpp  bpr.h  bpr.pyx  lmf.pyx  matrix_factorization_base.py  select.h  topk.pyx
implicit/cuda/: __init__.py  _cuda.cpp  _cuda.pyx  als.cu  als.h  bpr.cu  bpr.h  matrix.cu  matrix.h  utils.cuh
implicit/datasets/: _download.py  lastfm.py  million_song_dataset.py  movielens.py  reddit.py  sketchfab.py
implicit/gpu/: CMakeLists.txt  __init__.py  _cuda.cpp  _cuda.pyx  als.cu  als.h  als.pxd  als.py  bpr.cu  bpr.h  bpr.pxd  bpr.py  convert.cuh  device_buffer.cu  device_buffer.h  dot.cuh  faiss_block_select_half.cu  knn.cu  knn.h  knn.pxd  matrix.cu  matrix.h  matrix.pxd  matrix_factorization_base.py  random.cu  random.h  random.pxd  utils.cuh  utils.h  utils.pxd
tests/: als_test.py  annoy_als_test.py  approximate_als_test.py  bpr_test.py  cml_test.py  evaluation_test.py  gpu_test.py  implicit_test.py  knn_test.py  lmf_test.py  recommender_base.py  recommender_base_test.py
