[tool.black]

line-length = 100

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    # scikit-build 0.12 doesn't support Cython docstrings, get the latest code
    # until a new release is pushed
    # https://github.com/scikit-build/scikit-build/issues/518
    "scikit-build@git+https://github.com/scikit-build/scikit-build.git",
    "Cython>=0.24",
    "scipy>=0.16"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# skip testing in the cibuildwheel phase, will install the wheels later
# and verify
test-command = ""
skip = ["pp*", "*musl*",  "*-manylinux_i686", "*win32"]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_x86_64*"
before-all = "ci/install_cuda.sh"

# auditwheel includes cuda libraries, just skip it
[tool.cibuildwheel.linux]
repair-wheel-command = ""

[tool.cibuildwheel.linux.environment]
CUDACXX = "/usr/local/cuda/bin/nvcc"
