[build-system]
requires = [
    "wheel",
    "scikit-build-core>=0.11",
    "cython",
    "cython-cmake",
    "scipy>=0.16",
]
build-backend = "scikit_build_core.build"

[project]
name = "implicit"
version = "0.7.2"
description = "Collaborative Filtering for Implicit Feedback Datasets"
readme = "README.md"
authors = [
  { name = "Ben Frederickson", email = "ben@benfrederickson.com" },
]
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy>=1.17.0", "scipy>=0.16", "tqdm>=4.27", "threadpoolctl"]

[tool.scikit-build]
wheel.exclude = ["**.pyx", "**.cmake", "**.cuh", "**.hpp", "**.h", "**.hpp.in"]
cmake.version = ">=3.21.0"
ninja.version = ">=1.10"
build-dir = "build"

[tool.cibuildwheel]
# skip testing in the cibuildwheel phase, will install the wheels later
# and verify
test-command = ""
skip = ["*t-*", "*musl*",  "*-manylinux_i686", "*win32"]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_x86_64*"
before-all = "ci/install_cuda_13.sh"

# auditwheel includes cuda libraries, just skip it
[tool.cibuildwheel.linux]
repair-wheel-command = ""

[tool.cibuildwheel.linux.environment]
CUDACXX = "/usr/local/cuda/bin/nvcc"

# Build `universal2` and `arm64` wheels on an Intel runner.
# Note that the `arm64` wheel and the `arm64` part of the `universal2`
# wheel cannot be tested in this configuration.
[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.pytest.ini_options]
filterwarnings = ['ignore::implicit.utils.ParameterWarning']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["implicit"]
