[bumpversion]
current_version = 0.4.8
commit = True
tag = True

[metadata]
description-file = README.md

[flake8]
max-line-length = 100
exclude = build,.eggs,.tox
ignore = E203

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
known_first_party = implicit
known_third_party = scipy,annoy,numpy,cython,pandas
line_length = 100
skip = build,.eggs,.tox

[bumpversion:file:implicit/__init__.py]

[bumpversion:file:setup.py]
